Upgrade to Laravel 5. Delete stuff that we don't need.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-/bootstrap/compiled.php
 /vendor
-composer.phar
-composer.lock
-.env.*.php
-.env.php
-!.env.example.php
+.env
+.env.*
+!.env.example
 .DS_Store
 Thumbs.db
-workbench/*
+/flarum
 .vagrant
-**/npm-debug.log
-public/packages/flarum
+/public/flarum
