Update dependencies, use Studio for managing core subdirectory.

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
 	"require": {
 		"laravel/framework": "5.0.*"
 	},
+	"require-dev": {
+		"franzl/studio": "1.0.x@dev"
+	},
 	"autoload": {
 		"psr-4": {
 			"App\\": "app/"
