--- a/system/composer.json
+++ b/system/composer.json
@@ -6,8 +6,9 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"zendframework/zend-diactoros": "^1.0",
-		"zendframework/zend-stratigility": "^1.0"
+		"zendframework/zend-diactoros": "^1.1@dev",
+		"zendframework/zend-stratigility": "^1.0",
+		"franzl/whoops-middleware": "dev-master"
 	},
 	"require-dev": {
 		"franzl/studio": "1.0.x@dev"
