--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "system/core"]
-	path = system/core
+[submodule "flarum/core"]
+	path = flarum/core
 	url = https://github.com/flarum/core.git
