Use better way of ensuring Authorization header
This will need some testing though

--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,12 @@
 <IfModule mod_rewrite.c>
   RewriteEngine on
 
+  RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
   RewriteRule ^api(.*)$ api.php [QSA,L]
   RewriteRule ^admin(.*)$ admin.php [QSA,L]
 
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^(.*)$ index.php [QSA,L]
-</IfModule>
-
-<IfModule mod_wsgi.c>
-  WSGIPassAuthorization On
 </IfModule>
