Disable Apache's MultiViews option
It can mess up rewriting.

See http://discuss.flarum.org/d/613-installation-went-well-but-i-can-t-visit-the-admin-section

--- a/.htaccess
+++ b/.htaccess
@@ -9,4 +9,7 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^(.*)$ index.php [QSA,L]
+  
+  # MultiViews can mess up our rewriting scheme
+  Options -MultiViews
 </IfModule>
