Remove flarum/core composer dependency
We use git + studio to include the flarum/core dependency, so it
needn't be in composer.json. (Our build script still `composer
require`s it.)

--- a/flarum/composer.json
+++ b/flarum/composer.json
@@ -8,8 +8,7 @@
         "illuminate/container": "5.1.*",
         "monolog/monolog": "^1.16.0",
         "zendframework/zend-stratigility": "^1.1",
-        "franzl/whoops-middleware": "dev-master",
-        "flarum/core": "0.1.x@dev"
+        "franzl/whoops-middleware": "dev-master"
     },
     "require-dev": {
         "franzl/studio": "1.0.x@dev"
