Require composer installer
This will make packages with the type flarum-extension install into the extensions directory.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "docs": "http://flarum.org/docs"
     },
     "require": {
+        "flarum/composer-installer": "dev-master",
         "flarum/core": "dev-master"
     },
     "require-dev": {
