--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         },
         {
             "name": "Franz Liedke",
-            "email": "franz.liedke@gmail.com"
+            "email": "franz@develophp.org"
         }
     ],
     "support": {
