--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "docs": "http://flarum.org/docs"
     },
     "require": {
-        "flarum/composer-installer": "^0.1.0",
+        "flarum/composer-installer": "*",
         "flarum/core": "^0.1.0",
         "flarum/akismet": "^0.1.0",
         "flarum/approval": "^0.1.0",
