--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "flarum/flarum-ext-tags": "^0.1.0"
     },
     "require-dev": {
-        "franzl/studio": "dev-master"
+        "franzl/studio": "^0.10.0"
     },
     "config": {
         "preferred-install": "dist"
