--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
     },
     "require-dev": {
         "franzl/studio": "^0.11.0",
-        "php-pm/php-pm": "dev-master",
-        "franzl/php-pm-psr7": "dev-master"
+        "php-pm/psr7-adapter": "dev-master"
     },
     "config": {
         "preferred-install": "dist"
