--- a/.htaccess
+++ b/.htaccess
@@ -17,6 +17,7 @@
   RewriteRule ^vendor/(.*)?$ / [F,L]
   RewriteRule ^storage/(.*)?$ / [F,L]
   RewriteRule ^config.php$ / [F,L]
+  RewriteRule ^.git/(.*)?$ / [F,L]
 
   RewriteRule ^api(.*)$ api.php [QSA,L]
   RewriteRule ^admin(.*)$ admin.php [QSA,L]
