Remove PPM for now
Since it doesn't have a stable version tagged, which is causing issues with `composer install`.

--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,7 @@
         "flarum/flarum-ext-tags": "^0.1.0"
     },
     "require-dev": {
-        "franzl/studio": "^0.11.0",
-        "php-pm/psr7-adapter": "dev-master"
+        "franzl/studio": "^0.11.0"
     },
     "config": {
         "preferred-install": "dist"
