--- a/.htaccess
+++ b/.htaccess
@@ -27,7 +27,7 @@
   RewriteRule ^storage/(.*)?$ / [F,L]
   RewriteRule ^config.php$ / [F,L]
   RewriteRule /\.git / [F,L]
-  RewriteRule ^composer\.lock$ / [F,L]
+  RewriteRule ^composer\.(lock|json)$ / [F,L]
 
   RewriteRule ^api(.*)$ api.php [QSA,L]
   RewriteRule ^admin(.*)$ admin.php [QSA,L]
