--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,11 @@
         "flarum/flarum-ext-subscriptions": "^0.1.0",
         "flarum/flarum-ext-suspend": "^0.1.0",
         "flarum/flarum-ext-tags": "^0.1.0",
-        "wuethrich44/flarum-ext-sso": "^1.1"
+        "wuethrich44/flarum-ext-sso": "^1.1",
+        "romanzpolski/flarum-ext-shawTheme": "*@dev",
+        "sijad/flarum-ext-pages": "dev-master",
+        "davis/flarum-ext-customfooter": "dev-master",
+        "avatar4eg/flarum-ext-users-list": "dev-master"
     },
     "require-dev": {
         "franzl/studio": "^0.11.0"
@@ -55,5 +59,11 @@
         "preferred-install": "dist"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "workbench": {
+            "type": "path",
+            "url": "workbench/*/"
+        }
+    }
 }
