--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
         "flarum/flarum-ext-sticky": "^0.1.0",
         "flarum/flarum-ext-subscriptions": "^0.1.0",
         "flarum/flarum-ext-suspend": "^0.1.0",
-        "flarum/flarum-ext-tags": "^0.1.0",
-        "http-interop/http-middleware": "^0.4.0"
+        "flarum/flarum-ext-tags": "^0.1.0"
     },
     "config": {
         "preferred-install": "dist"
