--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "flarum/flarum-ext-tags": "^0.1.0"
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "minimum-stability": "beta",
     "prefer-stable": true
