Update urls with their current canonical versions

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Delightfully simple forum software.",
     "type": "project",
     "keywords": ["forum", "discussion"],
-    "homepage": "http://flarum.org",
+    "homepage": "https://flarum.org/",
     "license": "MIT",
     "authors": [
         {
@@ -18,7 +18,7 @@
     "support": {
         "issues": "https://github.com/flarum/core/issues",
         "source": "https://github.com/flarum/flarum",
-        "docs": "http://flarum.org/docs"
+        "docs": "https://flarum.org/docs/"
     },
     "require": {
         "flarum/core": "^0.1.0",
