--- a/composer.json
+++ b/composer.json
@@ -22,24 +22,24 @@
     },
     "require": {
         "flarum/core": "^0.1.0",
-        "flarum/flarum-ext-approval": "^0.1.0",
-        "flarum/flarum-ext-auth-facebook": "^0.1.0",
-        "flarum/flarum-ext-auth-github": "^0.1.0",
-        "flarum/flarum-ext-auth-twitter": "^0.1.0",
-        "flarum/flarum-ext-bbcode": "^0.1.0",
-        "flarum/flarum-ext-emoji": "^0.1.0",
-        "flarum/flarum-ext-english": "^0.1.0",
-        "flarum/flarum-ext-flags": "^0.1.0",
-        "flarum/flarum-ext-likes": "^0.1.0",
-        "flarum/flarum-ext-lock": "^0.1.0",
-        "flarum/flarum-ext-markdown": "^0.1.0",
-        "flarum/flarum-ext-mentions": "^0.1.0",
-        "flarum/flarum-ext-pusher": "^0.1.0",
-        "flarum/flarum-ext-statistics": "^0.1.0",
-        "flarum/flarum-ext-sticky": "^0.1.0",
-        "flarum/flarum-ext-subscriptions": "^0.1.0",
-        "flarum/flarum-ext-suspend": "^0.1.0",
-        "flarum/flarum-ext-tags": "^0.1.0"
+        "flarum/approval": "^0.1.0",
+        "flarum/auth-facebook": "^0.1.0",
+        "flarum/auth-github": "^0.1.0",
+        "flarum/auth-twitter": "^0.1.0",
+        "flarum/bbcode": "^0.1.0",
+        "flarum/emoji": "^0.1.0",
+        "flarum/lang-english": "^0.1.0",
+        "flarum/flags": "^0.1.0",
+        "flarum/likes": "^0.1.0",
+        "flarum/lock": "^0.1.0",
+        "flarum/markdown": "^0.1.0",
+        "flarum/mentions": "^0.1.0",
+        "flarum/pusher": "^0.1.0",
+        "flarum/statistics": "^0.1.0",
+        "flarum/sticky": "^0.1.0",
+        "flarum/subscriptions": "^0.1.0",
+        "flarum/suspend": "^0.1.0",
+        "flarum/tags": "^0.1.0"
     },
     "config": {
         "preferred-install": "dist",
