Prevent caching of JSON:API responses
See https://discuss.flarum.org/d/17793-a-force-refresh-fixes-everything-temporarily

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -40,6 +40,7 @@ Options -MultiViews
   ExpiresByType application/ld+json                   "access plus 0 seconds"
   ExpiresByType application/schema+json               "access plus 0 seconds"
   ExpiresByType application/vnd.geo+json              "access plus 0 seconds"
+  ExpiresByType application/vnd.api+json              "access plus 0 seconds"
   ExpiresByType application/xml                       "access plus 0 seconds"
   ExpiresByType text/calendar                         "access plus 0 seconds"
   ExpiresByType text/xml                              "access plus 0 seconds"
