--- a/public/.htaccess
+++ b/public/.htaccess
@@ -77,17 +77,9 @@ Options -MultiViews
   ExpiresByType application/font-woff2                "access plus 1 month"
   ExpiresByType font/woff2                            "access plus 1 month"
   ExpiresByType text/x-cross-domain-policy            "access plus 1 week"
+  ExpiresByType application/vnd.api+json              "access plus 0 seconds"
 </IfModule>
 
-# Resolve cache issue
-
-<FilesMatch "\.(html|htm|js|css|php)>
-FileETag None
-Header unset ETag
-Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
-Header set Pragma "no-cache"
-Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
-</FilesMatch>
 
 # Gzip compression
 <IfModule mod_deflate.c>
