use the same directory name

--- a/.nginx.conf
+++ b/.nginx.conf
@@ -8,7 +8,7 @@
 # server {
 #    listen 80;
 #    server_name forum.domain.tld;
-#    root /var/www/forum.site.tld/public;
+#    root /var/www/forum.domain.tld/public;
 #    include /var/www/forum.domain.tld/.nginx.conf;
 # }
 #
