prevents reading composer related json file

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,6 +7,7 @@
   # Uncomment the following lines if you are not using a `public` directory
   # to prevent sensitive resources from being exposed.
   # RewriteRule /\.git / [F,L]
+  # RewriteRule ^auth\.json$ / [F,L]
   # RewriteRule ^composer\.(lock|json)$ / [F,L]
   # RewriteRule ^config.php$ / [F,L]
   # RewriteRule ^flarum$ / [F,L]
