Add .git and auth.json to nginx sensitive resources

--- a/.nginx.conf
+++ b/.nginx.conf
@@ -5,7 +5,7 @@ location / {
 
 # Uncomment the following lines if you are not using a `public` directory
 # to prevent sensitive resources from being exposed.
-# location ~* ^/(composer\.(json|lock)|config\.php|flarum|storage|vendor) {
+# location ~* ^/(\.git|composer\.(json|lock)|auth\.json|config\.php|flarum|storage|vendor) {
 #   deny all;
 #   return 404;
 # }
