Used enabled flag for no-public restrictions
Also fixes any indentations

--- a/public/web.config
+++ b/public/web.config
@@ -9,14 +9,12 @@
         </defaultDocument>
         <rewrite>
             <rules>
-                <!-- Uncomment the rule below if you are not using the `public` directory to
+                <!-- Changed `enabled=` to true in the rule below if you are not using the `public` directory to
                 prevent sensitve resources from being exposed -->
-                <!--
-                <rule name="Disallow sensitive directories" stopProcessing="true">
+                <rule name="Disallow sensitive directories" enabled="false" stopProcessing="true">
                     <match url="^/(\.git|composer\.(json|lock)|auth\.json|config\.php|flarum|storage|vendor)" ignoreCase="false" />
                     <action type="CustomResponse" url="/" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
                 </rule>
-                -->
                 <rule name="Handle index.php re-write" stopProcessing="true">
                     <match url="^" ignoreCase="false" />
                     <conditions logicalGrouping="MatchAll">
