added @askvortsov1 to composer.json

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,10 @@
         {
             "name": "Matthew Kilgore",
             "email": "matthew@kilgore.dev"
+        },
+        {
+            "name": "Alexander (Sasha) Skvortsov",
+            "email": "askvortsov@flarum.org"
         }
     ],
     "support": {
