--- a/composer.json
+++ b/composer.json
@@ -10,31 +10,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Franz Liedke",
-            "email": "franz@develophp.org"
-        },
-        {
-            "name": "Daniel Klabbers",
-            "email": "daniel@klabbers.email",
-            "homepage": "https://luceos.com"
-        },
-        {
-            "name": "David Sevilla Martin",
-            "email": "me+flarum@datitisev.me",
-            "homepage": "https://datitisev.me"
-        },
-        {
-            "name": "Clark Winkelmann",
-            "email": "clark.winkelmann@gmail.com",
-            "homepage": "https://clarkwinkelmann.com"
-        },
-        {
-            "name": "Matthew Kilgore",
-            "email": "matthew@kilgore.dev"
-        },
-        {
-            "name": "Alexander (Sasha) Skvortsov",
-            "email": "askvortsov@flarum.org"
+            "name": "Flarum",
+            "email": "info@flarum.org",
+            "homepage": "https://flarum.org/team"
         }
     ],
     "support": {
