--- a/composer.json
+++ b/composer.json
@@ -21,23 +21,23 @@
         "docs": "https://flarum.org/docs/"
     },
     "require": {
-        "flarum/core": "^1.0.0",
-        "flarum/approval": "^1.0.0",
-        "flarum/bbcode": "^1.0.0",
-        "flarum/emoji": "^1.0.0",
-        "flarum/lang-english": "^1.0.0",
-        "flarum/flags": "^1.0.0",
-        "flarum/likes": "^1.0.0",
-        "flarum/lock": "^1.0.0",
-        "flarum/markdown": "^1.0.0",
-        "flarum/mentions": "^1.0.0",
-        "flarum/nicknames": "^1.0.0",
-        "flarum/pusher": "^1.0.0",
-        "flarum/statistics": "^1.0.0",
-        "flarum/sticky": "^1.0.0",
-        "flarum/subscriptions": "^1.0.0",
-        "flarum/suspend": "^1.0.0",
-        "flarum/tags": "^1.0.0"
+        "flarum/core": "^1.0",
+        "flarum/approval": "*",
+        "flarum/bbcode": "*",
+        "flarum/emoji": "*",
+        "flarum/lang-english": "*",
+        "flarum/flags": "*",
+        "flarum/likes": "*",
+        "flarum/lock": "*",
+        "flarum/markdown": "*",
+        "flarum/mentions": "*",
+        "flarum/nicknames": "*",
+        "flarum/pusher": "*",
+        "flarum/statistics": "*",
+        "flarum/sticky": "*",
+        "flarum/subscriptions": "*",
+        "flarum/suspend": "*",
+        "flarum/tags": "*"
     },
     "config": {
         "preferred-install": "dist",
