--- a/.nginx.conf
+++ b/.nginx.conf
@@ -62,6 +62,7 @@ gzip_types
     image/x-icon
     text/cache-manifest
     text/css
+    text/javascript
     text/plain
     text/vcard
     text/vnd.rim.location.xloc
