Correct spelling mistakes

--- a/public/web.config
+++ b/public/web.config
@@ -10,7 +10,7 @@
         <rewrite>
             <rules>
                 <!-- Changed `enabled=` to true in the rule below if you are not using the `public` directory to
-                prevent sensitve resources from being exposed -->
+                prevent sensitive resources from being exposed -->
                 <rule name="Disallow sensitive directories" enabled="false" stopProcessing="true">
                     <match url="^/(\.git|composer\.(json|lock)|auth\.json|config\.php|flarum|storage|vendor)" ignoreCase="false" />
                     <action type="CustomResponse" url="/" statusCode="403" statusReason="Forbidden" statusDescription="Forbidden" />
