Add 'web' network to code-network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
 networks:
     code-network:
         driver: bridge
+        name: web
+        external: true
     db-network:
       driver: bridge
 
