Add container name for web service in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   web:
     image: nginx:alpine
+    container_name: flarum-web
     volumes:
       - ./:/var/www
       - ./nginx/flarum.conf:/etc/nginx/conf.d/default.conf
