--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: nginx:alpine
     container_name: flarum-web
     volumes:
-      - ./:/var/www
-      - ./nginx/flarum.conf:/etc/nginx/conf.d/default.conf
-      - ./.nginx.conf:/etc/nginx/conf.d/.nginx.conf
+      - .${PROJECT_BASE}/:/var/www
+      - .${PROJECT_BASE}/nginx/flarum.conf:/etc/nginx/conf.d/default.conf
+      - .${PROJECT_BASE}/.nginx.conf:/etc/nginx/conf.d/.nginx.conf
     ports:
     - 8080:80
     networks:
@@ -16,12 +16,12 @@ services:
 
   php:
     build:
-      context: .
+      context: .${PROJECT_BASE}
       dockerfile: flarum-fpm.dockerfile
     image: flarum-fpm:1
     container_name: flarum-php
     volumes:
-      - ./:/var/www
+      - .${PROJECT_BASE}/:/var/www
     networks: 
       - code-network
       - db-network
