--- a/nginx/flarum.conf
+++ b/nginx/flarum.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name flarum-web;
+    server_name 0.0.0.0;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/public;
