--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - .${PROJECT_BASE}/:/var/www
       - .${PROJECT_BASE}/nginx/flarum.conf:/etc/nginx/conf.d/default.conf
       - .${PROJECT_BASE}/.nginx.conf:/etc/nginx/conf.d/.nginx.conf
-    ports:
-    - 8080:80
+    expose:
+    - 80
     networks:
       - code-network
     depends_on:
